--- a/module-federation-basic/host/public/index.html
+++ b/module-federation-basic/host/public/index.html
@@ -6,6 +6,14 @@
   <title>Host Application</title>
 </head>
 <body>
+  <h1>Host Application</h1>
+  <nav>
+    <ul>
+      <li><a href="#">Products</a></li>
+      <li><a href="#">Commissions</a></li>
+      <li><a href="#">Sellers</a></li>
+    </ul>
+  </nav>
   <script src="main.js"></script>
 </body>
 </html>
